--- a/timeOut/src/index.html
+++ b/timeOut/src/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <canvas id="canvas" style="display: block;margin:50px auto;"></canvas>
-    <script src="bundle.js"></script>
+    <script src="./digit.js"></script>
+    <script src="./cutdownClock.js"></script>
 </body>
 </html>
